# mcs-source

./: .gitignore  README.md  TODO.md  data_retriaval.ipynb  environment.yaml  evaluation_pipeline_example.ipynb  execute_model.py  experiments_log.md  metacentrum_run.sh  metacentrum_run_all_subsets_job.sh  poznamky.md  poznamky_prezentace.md  pyproject.toml  requirements.txt  requirements_metacentrum.txt  run_evaluation.sh  run_experiments_from_settings_metacentrum.py  run_metacentrum_experiments.py  run_model.sh  subset_generator.py  useful_commands.md  working_log.md
conference_plots/: image_neurons_analysis.ipynb  interpret_model(2).ipynb  interpret_model.ipynb  invisible_neurons_analysis.ipynb  overall_results.ipynb  result_plotting.ipynb
dataset_creation/: export_dataset.py  export_parameters.md
dataset_processor/: README.md  copy_subset.sh  dataset_renamer.py  subset_generator.py  time_interval_trimmer.py
evaluation_tools/: README.md  evaluation_processor.py  evaluation_subset_selector.py  response_analysis.ipynb  response_analyzer.py  response_analyzis.ipynb  results_plotter.py
experiment_resuls/: README.md
metacentrum_scripts/: README.md  generate_script.py  job_template.pbs  run_generate_script.sh  single_run.sh  submit_job_template.sh  test_job.sh
nn_model/: README.md  activation.py  activation_functions.py  connection_learning.py  custom_rnn.py  dataset_loader.py  dictionary_handler.py  evaluation_metric_handler.py  evaluation_metrics.py  evaluation_results_saver.py  globals.py  layer_config.py  layers.py  logger.py  model.py  model_executer.py  (+6 more)
(+1540 files in other folders)
